# pixelmind

./: .gitignore  AUTODL_GUIDE.md  README.md  pyproject.toml  requirements.txt  setup.py
configs/: llm_pretrain.yaml  llm_sft.yaml  vlm_grpo.yaml  vlm_pretrain.yaml  vlm_sft.yaml
model/siglip2-base-p32-256-ve/: README.md
pixelmind/: __init__.py  config.py
pixelmind/data/: __init__.py  collate.py  mm_dataset.py  text_dataset.py
pixelmind/eval/: __init__.py  benchmarks.py  chat_llm.py  chat_vlm.py  eval_pretrain.py
pixelmind/model/: __init__.py  attention.py  block.py  feedforward.py  llm.py  vision.py  vlm.py
pixelmind/scripts/: convert.py  web_demo.py
pixelmind/trainer/: __init__.py  checkpoint.py  llm_pretrain.py  llm_sft.py  model_init.py  reward.py  rollout_engine.py  utils.py  vlm_grpo.py  vlm_pretrain.py  vlm_sft.py
scripts/: eval_pretrain.sh
