[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pixelmind"
version = "0.1.0"
description = "PixelMind: Train a Tiny VLM from Scratch — 65M params, 2h, $3, single GPU"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
train = [
    "torch>=2.0",
    "transformers>=4.45",
    "datasets",
    "pyarrow",
    "Pillow",
    "swanlab",
    "numpy",
    "accelerate",
]
eval = [
    "torch>=2.0",
    "transformers>=4.45",
    "Pillow",
]
all = [
    "pixelmind[train,eval]",
]

[tool.setuptools.packages.find]
include = ["pixelmind*"]
